# fusogen-abstract

./: Cargo.toml  README.md
contracts/Fusogen/: Cargo.toml  metadata.json
contracts/Fusogen/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/Fusogen/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/Fusogen/src/ibc/: callback.rs  module.rs
contracts/Fusogen/src/replies/: instantiate.rs
contracts/Fusogen/tests/: integration.rs
frontend/: README.md  abstract.config.ts
